--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-    "mysql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;Port=3306;"
-  }
+    "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;Port=3306;"
+  },
+  "Jwt": "minimal-api-alunos-vamos_lá"
 }
