--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-    "MySql": "Server=localhost;Database=minimal_apitest;Uid=root;Pwd=root;Port=3306;"
+    "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;Port=3306;"
   },
   "Jwt": "minimal-api-alunos-vamos_lá"
 }
